# softcom-smart-automation

./: .env  .env.example  .gitignore  .pabotsuitenames  README.md  log.html  main.py  output.xml  pyproject.toml  report.html  run_tests.ps1  run_tests.sh
.claude/: settings.local.json
docs/: CLAUDE.md  EXECUTION_PLAN.md  MODULE_GUIDE.md  analyze_navigations_prompt.md  tests_coverage.md
documentation/: COMMANDS_MODULE.md  NAVIGATION_ANALYSIS.md
documentation/examples/: base_default.resource  default_suite.robot  example_navigation.resource
modules/commands/: base_commands.resource
modules/default/: base_default.resource
modules/pdv/: base_pdv.resource  pdv_guide.md
pabot_configs/: cielo.args  clover.args  fiserv.args  getnet.args  getnet_dx8000.args  getnet_p2.args  getnet_p3.args  mercadopago.args  pagbank.args  pagbank_a11.args  quickpay.args  quickpay_a910.args  rede.args  rede_n960k.args  safra.args  sipag_dx8000.args  sipag_p2.args  sipag_x990.args  stone.args
pabot_results/: log.html  output.xml  output1.xml  output2.xml  report.html
pabot_results/pabot_results/: output1.xml  output2.xml  output3.xml
resources/base/: base.resource  open_app.resource  setup.resource
resources/data/: devices.yaml
resources/helpers/: common_keywords.resource  error_handling.resource  structured_logging.resource
resources/libraries/: devicesconfig.py  locators_loader.py  logcatlibrary.py
resources/locators/: commands.yml  common.yml  default.yml  pdv.yml
resources/variables/: env_variables.py
results_dryrun/: log.html  output.xml  report.html
(+94 files in other folders)
