[project]
name = "softcom-smart-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-robotframework>=2.16.0",
    "appium-python-client>=5.3.1",
    "docutils>=0.22.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "robotframework>=7.4.2",
    "robotframework-appiumlibrary>=3.2.1",
    "robotframework-faker>=6.0.0",
    "robotframework-pabot>=5.2.2",
    "robotframework-robocop>=8.2.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
